<package format="2">
  <name>schunk_description</name>
  <version>0.6.12</version>
  <description>This package contains the description (mechanical, kinematic, visual,
  etc.) of different schunk components. The files in this package are parsed and used by
  a variety of other components. Most users will not interact directly
  with this package.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/schunk_description</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="bfb@ipa.fhg.de">Bruno Brito</maintainer>
  <author email="fxm@ipa.fhg.de">Felix Messmer</author>
  <author email="nhg@ipa.fhg.de">Nadia Hammoudeh Garcia</author>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>gtest</test_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
