<package>
  <name>schunk_libm5api</name>
  <version>0.5.4</version>
  <description>This package wraps the libm5api to use it as a ros dependency. Original sources from http://www.schunk-modular-robotics.com/fileadmin/user_upload/software/schunk_libm5api_source.zip.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/schunk_libm5api</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libpcan</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>libntcan</build_depend>
  <run_depend>libntcan</run_depend>
  <run_depend>libpcan</run_depend>
  <run_depend>roslib</run_depend>
  <!-- <test_depend>libpcan</test_depend> -->
  <!-- <test_depend>libntcan</test_depend> -->

  <export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lm5api" cflags="-I${prefix}/include -I${prefix}/include/schunk_libm5api"/>
  </export>
</package>
