<package format="2">
  <name>schunk_libm5api</name>
  <version>0.6.8</version>
  <description>This package wraps the libm5api to use it as a ros dependency. Original sources from http://www.schunk-modular-robotics.com/fileadmin/user_upload/software/schunk_libm5api_source.zip.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/schunk_libm5api</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>libntcan</depend>
  <depend>libpcan</depend>

</package>
