<package format="2">
  <name>schunk_modular_robotics</name>
  <version>0.6.12</version>
  <description>This stack includes packages that provide access to the Schunk hardware through ROS messages, services and actions.</description>

  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/schunk_modular_robotics</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="bfb@ipa.fhg.de">Bruno Brito</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>schunk_description</exec_depend>
  <exec_depend>schunk_libm5api</exec_depend>
  <exec_depend>schunk_powercube_chain</exec_depend>
  <exec_depend>schunk_sdh</exec_depend>
  <exec_depend>schunk_simulated_tactile_sensors</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
