<package format="2">
  <name>schunk_powercube_chain</name>
  <version>0.6.8</version>
  <description>This packages provides a configurable driver of a chain
  of Schunk powercubes. The powercube chain is configured
  through parameters. Most users will not directly interact
  with this package but with the corresponding launch files
  in other packages, e.g. schunk_bringup, cob_bringup, ...</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/schunk_powercube_chain</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="fmw@ipa.fhg.de">Florian Weisshardt</maintainer>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cob_srvs</depend>
  <depend>control_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>libntcan</depend>
  <depend>libpcan</depend>
  <depend>linux-headers-generic</depend>
  <depend>roscpp</depend>
  <depend>schunk_libm5api</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdf</depend>

</package>
