<package>
  <name>schunk_sdh</name>
  <version>0.6.2</version>
  <description>This package provides an interface for operating the schunk dexterous hand (SDH), including the tactile sensors.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/schunk_sdh</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="mdl@ipa.fhg.de">Mathias Luedtke</maintainer>
  <author email="mdl@ipa.fhg.de">Mathias Luedtke</author>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>cob_srvs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>libusb-dev</build_depend>
  <build_depend>libntcan</build_depend>
  <build_depend>libpcan</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dpkg</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>cob_srvs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>libusb-dev</run_depend>
  <run_depend>libntcan</run_depend>
  <run_depend>libpcan</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  
  <export>

  </export>
</package>
