<package format="2">
  <name>schunk_sdh</name>
  <version>0.6.8</version>
  <description>This package provides an interface for operating the schunk dexterous hand (SDH), including the tactile sensors.</description>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/schunk_sdh</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="mdl@ipa.fhg.de">Mathias Luedtke</maintainer>
  <author email="mdl@ipa.fhg.de">Mathias Luedtke</author>
  <author email="fmw@ipa.fhg.de">Florian Weisshardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib</depend>
  <depend>boost</depend>
  <depend>cob_srvs</depend>
  <depend>control_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>dpkg</depend>
  <depend>libntcan</depend>
  <depend>libpcan</depend>
  <depend>libusb-dev</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>trajectory_msgs</depend>
  <depend>urdf</depend>

</package>
