<?xml version="1.0"?>
<package>
  <name>schunk_sdhx</name>
  <version>0.6.2</version>
  <description>The schunk_sdhx package</description>

  <maintainer email="tdf@ipa.fhg.de">Thiago de Freitas</maintainer>
  <license>LGPL</license>

  <author email="tdf@ipa.fhg.de">Thiago de Freitas</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  
</package>
