<?xml version="1.0"?>
<package>
  <name>schunk_sdhx</name>
  <version>0.6.3</version>
  <description>The schunk_sdhx package</description>

  <maintainer email="tdf@ipa.fhg.de">Thiago de Freitas</maintainer>
  <license>LGPL</license>

  <author email="tdf@ipa.fhg.de">Thiago de Freitas</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>serial</run_depend>
  
</package>
