<package format="2">
  <name>schunk_sdhx</name>
  <version>0.6.8</version>
  <description>The schunk_sdhx package</description>

  <maintainer email="tdf@ipa.fhg.de">Thiago de Freitas</maintainer>
  <license>LGPL</license>

  <author email="tdf@ipa.fhg.de">Thiago de Freitas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>std_srvs</exec_depend>

</package>
